# Home-Credit-Default-Risk-Classification-INSY-674

./: .gitignore  BUSINESS_CONTEXT.md  DATA_REPORT.md  Dockerfile  EXPLAINABILITY.md  HYPOTHESIS.md  LIMITATIONS.md  Makefile  README.md  RESULTS.md  VALIDATION.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.mplconfig/: fontlist-v390.json
artifacts/: cost_sensitivity.csv  drift_summary.json  learning_curves.csv  model_bundle.joblib  test_calibration.csv  test_subgroup_metrics.csv  train_calibration.csv  training_report.json  validation_calibration.csv  validation_confusion_matrix.csv  validation_subgroup_metrics.csv
src/homecredit_service/: config.py  features.py  local_app.py  main.py  modeling.py  schemas.py  service.py  train.py
tests/: test_api.py  test_features.py  test_local_app_policy.py  test_modeling.py
